--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "angularjs-file-upload": "0.1.4",
     "angular-sanitize": "v1.0.8",
     "bootstrap-timepicker":"0.2.6",
+    "fontawesome":"v4.0.3",
+    "angular-notifications":"v0.1",
     "ckeditor": ""
   },
   "devDependencies": {
